namespace java info.matsumana.armeria.thrift

service Hello2Service {
    string hello(1:string name)
}
